--- a/package.json
+++ b/package.json
@@ -24,19 +24,24 @@
     "yargs": "^4.5.0"
   },
   "devDependencies": {
+    "angular": "^1.5.9",
+    "angular-loader": "^1.5.9",
+    "angular-mocks": "^1.5.9",
+    "angular-sanitize": "^1.5.9",
     "gulp-replace-task": "^0.11.0",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
+    "jquery": "^3.1.1",
     "karma": "^0.13.22",
     "karma-coverage": "^0.5.5",
     "karma-eslint": "^2.1.0",
     "karma-jasmine": "^0.3.8",
-    "karma-junit-reporter": "^0.4.1",
+    "karma-json-fixtures-preprocessor": "0.0.6",
     "karma-mocha-reporter": "^2.1.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "protractor": "^3.2.2"
+    "karma-phantomjs-launcher": "^1.0.2"
   },
   "scripts": {
+    "pretest": "gulp build-readable",
     "test": "karma start ./karma.conf.js",
     "pretest-full": "gulp build-readable",
     "test-full": "karma start ./karma-full.conf.js",
