--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "cleanName": "template-widget"
   },
   "dependencies": {
+    "babel-preset-react": "^6.24.1",
     "materia-widget-development-kit": "https://github.com/ucfopen/Materia-Widget-Dev-Kit.git#v1.2.3-alpha3",
-    "ng-annotate-loader": "^0.6.1"
+    "ng-annotate-loader": "^0.6.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "scripts": {
     "start": "webpack-dev-server",
