--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "cleanName": "template-widget"
   },
   "dependencies": {
+    "angular": "1.6.9",
+    "angular-mocks": "1.6.9",
     "babel-preset-react": "^6.24.1",
+    "jest": "^23.6.0",
+    "jest-coffee-preprocessor": "^1.0.0",
     "materia-widget-development-kit": "https://github.com/ucfopen/Materia-Widget-Dev-Kit.git#v1.2.3-alpha3",
     "ng-annotate-loader": "^0.6.1",
     "react": "^16.5.2",
@@ -13,7 +17,23 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack",
-    "build-prod": "webpack -p"
+    "build-prod": "webpack -p",
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.coffee$": "<rootDir>/node_modules/jest-coffee-preprocessor/index.js"
+    },
+    "moduleFileExtensions": [
+      "coffee",
+      "js",
+      "json",
+      "jsx"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ]
   },
   "author": "University of Central Florida, Center for Distributed Learning",
   "description": "Template widget to use as an example.",
