--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "materia-widget-development-kit": "https://github.com/ucfopen/Materia-Widget-Dev-Kit.git#v1.2.3-alpha3",
     "ng-annotate-loader": "^0.6.1",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-test-renderer": "^16.5.2"
   },
   "scripts": {
     "start": "webpack-dev-server",
