adds travis file for testing and publishing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ucfopen/template-widget",
+  "name": "materia-template-widget",
   "materia": {
     "cleanName": "template-widget"
   },
