#3 Forgot to update Travis instructions again.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: node_js
 node_js:
-- '6'
+- '12'
 cache:
   yarn: true
   directories:
   - node_modules
 before_install:
 - npm config set spin false
+- npm install -g yarn
 - npm install -g npm@^5
 script:
 - yarn test-ci
