--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-  "presets": ["@babel/env", "@babel/preset-react"]
+  "presets": [
+    [
+      "@babel/env", {
+        "targets": {
+          "browsers": [
+            "ie >= 11"
+          ]
+        }
+      }
+    ],
+    "@babel/preset-react"]
 }
