--- a/src/install.yaml
+++ b/src/install.yaml
@@ -29,8 +29,7 @@ meta_data:
     # - Question/Answer
     # - My custom Question
   about: >
-    This is a simple widget for first-time
-    Materia developers to have a basuc starting place.
+    A simple widget implementing various best practices to be used as a starting point for first-time Materia developers.
 
   # The text displayed on the widget catalog page.
   excerpt: >
