adds guides to install.yaml

--- a/src/install.yaml
+++ b/src/install.yaml
@@ -16,6 +16,8 @@ files:
   creator: creator.html
   player: player.html
   flash_version: 0
+  player_guide: guides/player.html
+  creator_guide: guides/creator.html
 score:
   is_scorable: Yes
   score_module: TemplateWidget
