--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
     "cleanName": "template-widget"
   },
   "dependencies": {
+    "@babel/core":"^7.14.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "7.13.8",
+    "babel-loader":"^8.2.2",
+    "babel-jest": "26.6.3",
     "angular": "1.6.9",
     "angular-mocks": "1.6.9",
-    "jest": "^24.8.0",
+    "jest": "^26.6.3",
     "jest-coffee-preprocessor": "^1.0.0",
-    "materia-widget-development-kit": "^2.4.2",
+    "materia-widget-development-kit": "2.5.1",
     "ng-annotate-loader": "^0.6.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
